kubernetes/admission-policies/exception.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: exception-monitoring-privileged
spec:
  policyName: deny-privileged-containers
  validationActions: [Audit]
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: ["monitoring"]
    resourceSelector:
      matchExpressions:
        - key: admission.exceptions.k8s.io/privileged
          operator: In
          values: ["allowed"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: exception-system-latest-tag
spec:
  policyName: deny-latest-image-tag
  validationActions: [Audit]  # только логируем
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - kube-system
            - monitoring
